--- a/view/frontend/web/template/payment/buckaroo_magento2_capayablepostpay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_capayablepostpay.html
@@ -44,10 +44,10 @@
                             <ul id="Saluation">
                                 <li>
                                     <input type="radio" id="buckaroo_magento2_capayablepostpay_genderSelectMan"
+                                           data-validate="{required:true}"
                                            data-bind="
                                                    value: '1',
                                                    click: setSelectedGender.bind($data, '1'),
-                                                   attr: { 'data-validate': JSON.stringify({ 'required': true }) },
                                                    checked: genderValidate
                                                    "
                                            class="field"
@@ -56,10 +56,10 @@
                                 </li>
                                 <li>
                                     <input type="radio" id="buckaroo_magento2_capayablepostpay_genderSelectWoman"
+                                           data-validate="{required:true}"
                                            data-bind="
                                                    value: '2',
                                                    click: setSelectedGender.bind($data, '2'),
-                                                   attr: { 'data-validate': JSON.stringify({ 'required': true }) },
                                                    checked: genderValidate
                                                     "
                                            class="field"
@@ -92,6 +92,7 @@
                             <input id="buckaroo_magento2_capayablepostpay_DoB"
                                    class="field"
                                    type="text"
+                                   data-validate="{required:true}"
                                    data-bind="
                                            datepicker: {
                                                 storage: dateValidate,
@@ -103,8 +104,7 @@
                                                 }
                                            },
                                            valueUpdate: 'blur',
-                                           value: dateValidate,
-                                           attr: { 'data-validate': JSON.stringify({ 'required': true })}"
+                                           value: dateValidate"
                                    name="payment[buckaroo_magento2_capayablepostpay][customer_DoB]">
                         </div>
                         <div for="buckaroo_magento2_capayablepostpay_DoB" generated="true" class="mage-error" id="dob-error" style="display: none;"><span data-bind="i18n: 'This is a required field.'"></span> </div>
@@ -131,10 +131,10 @@
                                    name="payment[buckaroo_magento2_capayablepostpay][COCNumber]"
                                    class="input-text field"
                                    type="text"
+                                   data-validate="{required:true, minlength:8}"
                                    data-bind="
                                        valueUpdate: 'keyup',
-                                       value: CocNumber,
-                                       attr: { 'data-validate': JSON.stringify({'required': true, 'minlength': 8}) }">
+                                       value: CocNumber">
                         </div>
                     </div>
 
@@ -145,10 +145,10 @@
                                    name="payment[buckaroo_magento2_capayablepostpay][CompanyName]"
                                    class="input-text field"
                                    type="text"
+                                   data-validate="{required:true, 'min-words':1}"
                                    data-bind="
                                        valueUpdate: 'keyup',
-                                       value: CompanyName,
-                                       attr: { 'data-validate': JSON.stringify({'required': true, 'min-words': 1 })}">
+                                       value: CompanyName">
                         </div>
                     </div>
                     <!-- /ko -->
