--- a/view/frontend/web/template/payment/buckaroo_magento2_giropay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giropay.html
@@ -30,12 +30,10 @@
                         </label>
                         <div class="control">
                             <input id="bicnumber" class="input-text field _error" type="text"
+                                   data-validate="{required:true, BIC:true}"
                                    data-bind="
                                     value: bicnumber,
-                                    valueUpdate: 'keyup',
-                                    attr: {
-                                        'data-validate': JSON.stringify({ 'required': true,  'BIC':true  })
-                                    }
+                                    valueUpdate: 'keyup'
                                    "
                                    name="payment[buckaroo_magento2_giropay][customer_bic]">
                         </div>
