--- a/view/frontend/web/template/payment/buckaroo_magento2_ideal.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_ideal.html
@@ -39,9 +39,9 @@
 
                         <!-- ko if: selectionType == '2' -->
                             <select id="buckaroo_magento2_ideal_issuer" class="field"
+                                    data-validate="{'required-entry':true}"
                                     data-bind="value: idealIssuer,
-                                    event: { change: setSelectedBankDropDown },
-                                    attr: { 'data-validate': JSON.stringify({ 'required-entry': true }) }"
+                                    event: { change: setSelectedBankDropDown }"
                                     name="bank">
                                 <option data-bind="i18n: 'Select a bank', 'value': ''"></option>
                                 <!-- ko foreach: banktypes -->
